tests/snapshots/examples_fixtures/diagnostics_demos__lint__complexity_warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/lint/complexity_warnings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
