tests/snapshots/examples_fixtures/diagnostics_demos__lint__linter_warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/lint/linter_warnings.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Math` to import.

  examples/diagnostics_demos/lint/linter_warnings.flx:1:1
  |
1 | import Modules.Math as Math
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Math.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Math` under roots: examples/diagnostics_demos/lint, src, lib (imported from examples/diagnostics_demos/lint/linter_warnings.flx).
== stdout ==
<not executed>
