tests/snapshots/examples_fixtures/diagnostics_demos__lint__warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/lint/warnings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
